# channel

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CATALOG_INDEX_SPEC.md  DATA_LAKE_SQL_AGENT.md  SQL_DB_AGENT.md  SQL_SAFETY_POLICY.md
src/channel/: AGENTS.md  __init__.py  __main__.py  agent.py  cli.py
src/channel/agents/: supervisor.py
src/channel/catalog/: interfaces.py  mock.py
src/channel/connectors/: impala.py
src/channel/fixtures/: seed.py
src/channel/skills/query-writing/: SKILL.md
src/channel/skills/schema-exploration/: SKILL.md
src/channel/sql/: guard.py
src/channel/subagents/: data_lake_sql.py  sql_db.py
src/channel/tools/: data_lake_sql.py
tests/: test_agent_graph.py  test_catalog_mock.py  test_integration.py  test_routing.py  test_run_sql_validation.py  test_sql_guard.py  test_subagent_registration.py
