[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "channel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.3",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
channel = "channel.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
